Closed
Bug 205310
Opened 23 years ago
Closed 22 years ago
PNG image is displayed as garbage
Categories
(Core Graveyard :: Image: Painting, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: bugzilla, Assigned: tor)
References
()
Details
(Keywords: fixed1.4.2, regression)
Attachments
(3 files, 1 obsolete file)
|
16.03 KB,
image/png
|
Details | |
|
100.50 KB,
image/png
|
Details | |
|
1.39 KB,
patch
|
Biesinger
:
review+
blizzard
:
superreview+
chofmann
:
approval1.6+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.4b) Gecko/20030511
Build Identifier: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.4b) Gecko/20030511
http://images.freshmeat.net/screenshots/3088.png is displayed as
http://folk.uio.no/hakonrk/mozilla_image_bug.png
Reproducible: Always
Steps to Reproduce:
Load the following image:
http://images.freshmeat.net/screenshots/3088.png
If it looks okay at first, make Mozilla redraw by
minimizing/maximizing the window, selecting the image with
the mouse.
Actual Results:
http://folk.uio.no/hakonrk/mozilla_image_bug.png
Expected Results:
http://images.freshmeat.net/screenshots/3088.png
Happens even if I delete ~/.mozilla/ and run with a clean configuration.
OPERATING SYSTEM
================
Slackware 9.0 (also verified on Red Hat 7.3)
Linux 2.4.20 i686
SYSTEM LIBRARIES
================
libpthread-0.10.so
libdl-2.3.1.so
libgtk-1.2.so.0.9.1
libgdk-1.2.so.0.9.1
libgmodule-1.2.so.0.0.10
libglib-1.2.so.0.0.10
libXi.so.6.0
libXext.so.6.4
libX11.so.6.2
libm-2.3.1.so
libc-2.3.1.so
ld-2.3.1.so
MOZILLA VERSIONS
================
Mozilla 1.3
Mozilla 1.3.1
Mozilla 1.4b
Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.4b) Gecko/20030511
Comment 1•23 years ago
|
||
Image looks good on windows 2000. build 2003051108.
Comment 2•23 years ago
|
||
confirmed with linux trunk 20030510
this regressed between 2003041205 and 2003041408
WFM with my 5-10 Linux trunk build on a system that started out as Slackware
8.1. The garbage looks a lot like a video driver problem. Does it still occur if
you restart X without hardware acceleration?
| Reporter | ||
Comment 4•23 years ago
|
||
Yes, it happens even when
Option "NoAccel" "true"
I can also reproduce the bug on completely different machines.
(A workstation with GeForce 3 Ti200, a laptop with ATI Rage, another
workstation with a Matrox G400, and more.)
Are you sure you are unable to reproduce the bug? Did you try to
minimize->maximize Mozilla? Did you try to select the image by marking
it with the mouse (as in text selection)?
| Reporter | ||
Comment 5•23 years ago
|
||
I just noticed that you (tenthumbs@cybernex.net) had built your
own Mozilla. I tried Mozilla 1.3 that comes bundled with
Slackware 9.0, and the bug is NOT reproducible there. This particular
binary was also built from source, so it appears that just the
pre-built binaries from mozilla.org are affected. Can anyone else
confirm this?
I built mine with gcc 3.2.3, Slackware 9 uses3.2.2. I think the nightlies are
built with 2.95.3. Might be important, might not.
Comment 7•23 years ago
|
||
I am using my self-compiled build (gcc 3.2.something, gtk2) and am also seeing
this bug.
I still can't reproduce this but I noticed that the image has a useless alpha
channel (all opaque). This is the same image without an alpha channel. Does it
render badly?
| Reporter | ||
Comment 9•23 years ago
|
||
No, it looks just fine. But here's something to try for those of you
who are seeing this bug. Try saving the original freshmeat PNG
locally and open it from there. Can you reproduce the bug on
your local copy? I can't! How is this even possible? I'm linking
directly to the PNG on freshmeat, so why should it matter where
Mozilla gets it from?
Comment 10•23 years ago
|
||
Confirmed with build 2003041609 (SuSE Linux 8.1)
Additional notes:
- locally saved img displays OK
- saved, served from Apache 1.3.26 displays OK
- attached w/o alpha displays OK
- the Slashdot hosted img displays for a split second OK after loading
sometimes, then displays the "random" noise.
The HTTP headers from Slashdot (Apache 1.3.27) and local server are similar.
Comment 11•22 years ago
|
||
I have similar problems with png picture : see my screenshot of lea-linux.org!!!
I have became with the release 1.4 and is always present in the latest
nightbuild (take 3 minutes before here...)
my screenshot : http://site.voila.fr/rapsys/fucking_display.png
I have saved the image witch is worst displayed ant it's perfect show by the
gimp and electric eye...
It's does be a bug in mozilla....
I use the latest snapshot and i reproduct the bug from the 1.4 mozilla...
I am on a mdk 9.2, The bug append in the 9..1 (i don't know if it was present in
my 9.0 mdk...)
I have a nvidia card (with propriétar drivers...), a athlon-xp 2100+, a MSI
KT333-ARU, 512DDR, KDE 3.1.3mdk, 2.4.22-21mdkenterprise...
sorry for my pore english I am french...
Comment 12•22 years ago
|
||
How I see some png files...
| Assignee | ||
Comment 13•22 years ago
|
||
Attachment #138008 -
Attachment is obsolete: true
| Assignee | ||
Comment 14•22 years ago
|
||
Attachment #138009 -
Flags: superreview?(blizzard)
Attachment #138009 -
Flags: review?(cbiesinger)
Updated•22 years ago
|
Attachment #138009 -
Flags: review?(cbiesinger) → review+
Updated•22 years ago
|
Component: ImageLib → Image: GFX
Updated•22 years ago
|
Attachment #138009 -
Flags: superreview?(blizzard) → superreview+
| Assignee | ||
Comment 15•22 years ago
|
||
Checked in on trunk.
| Assignee | ||
Comment 16•22 years ago
|
||
Comment on attachment 138009 [details] [diff] [review]
only the relevant changes this time...
Longstanding bug with a simple fix that caused some PNGs to display
as garbage.
Attachment #138009 -
Flags: approval1.6?
Comment 17•22 years ago
|
||
Comment on attachment 138009 [details] [diff] [review]
only the relevant changes this time...
a=chofmann for 1.6
Attachment #138009 -
Flags: approval1.6? → approval1.6+
| Assignee | ||
Comment 18•22 years ago
|
||
Checked in on MOZILLA_1_6_BRANCH.
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
| Assignee | ||
Comment 19•22 years ago
|
||
Checked in on 1.4 branch - verbal approval from mkaply.
Keywords: fixed1.4.2
You need to log in
before you can comment on or make changes to this bug.
Description
•