Bug 205310 - some PNG files displayed with a garbage mask. r=biesi, sr=blizzard